# chubbishop

./: Cargo.toml  README.md
authorization_service/: Cargo.toml
common/: Cargo.toml
common/src/: response.rs
product_service/: Cargo.toml
product_service/src/: main.rs  routes.rs
product_service/src/db/: pool.rs
product_service/src/domain/: category.rs  product.rs
product_service/src/handlers/: category_handler.rs  mod.rs  product_handler.rs  product_review_handler.rs
product_service/src/services/: category_service.rs  mod.rs  product_review_service.rs  product_service.rs  service.rs
