[package]
name = "product_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "product_service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls", "bigdecimal"] }
bigdecimal = { version = "0.4.7", features = ["serde"] }
serde_json = "1"
serde = { version = "1.0.216", features = ["derive"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["serde","v4"] }
common = { path = "../common" }

